# dog_hunter_client

./: .gitmodules  CMakeLists.txt  README.md  dog_hunter.qmlproject  dog_hunter.qmlproject.qtds  qmlmodules
content/: ActionSelection.ui.qml  App.qml  CMakeLists.txt  Screen01.ui.qml  Screen02.ui.qml  Screen03.ui.qml  Screen04.ui.qml
imports/: CMakeLists.txt
imports/dog_hunter/: CMakeLists.txt  qmldir
imports/dog_hunter/designer/: plugin.metainfo
src/: Controller.cpp  Controller.h  TCPClient.h  import_qml_plugins.h  main.cpp
